--- a/com-bmw.html
+++ b/com-bmw.html
@@ -7,6 +7,7 @@
     <title>Співпраця з BMW</title>
     <link rel="stylesheet" href="scss/second.css">
     <link rel="stylesheet" href="css/second.css">
+    <link rel="stylesheet" href="scss/head.css">
     <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,7 @@
             <div class="header-all-text">
                  <div class="header-menu">
                     <div class="h-menu-img">
-                        <a href="/index.html"><img src="./img/logo.svg" alt="" class="logo-bmw"></a>
+                        <a href="/index.html"><img width="54" alt="BMW logo (gray)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/BMW_logo_%28gray%29.svg/54px-BMW_logo_%28gray%29.svg.png" class="logo-bmw"></a>
                         
                         <div class="header-menu-bar">
                             <a href="" class="menu_link">
